--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -693,7 +693,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     /*-------------------------------*/
     /*- HEADERS ---------------------*/
     .header-site .container {
-        padding: 20px;
+        /*padding: 20px;*/
     }
     /*---------------------------*/
     /*- NAV DISPLAY -------------*/
