--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1336,3 +1336,6 @@ div[itemprop="description"] {
     text-decoration: line-through !important;
     margin-right: 10px;
 }
+.contact{
+    margin-bottom: 50px;
+}
